add name, fullname, and fix title

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,6 +1,8 @@
 {
   "hero": {
-    "title": "Hi, I'm Gabriel",
-    "subtitle": "Fullstack Developer"
+    "title": "Hi, I'm",
+    "subtitle": "Fullstack Developer",
+    "name": "Gabriel",
+    "fullName": "Gabriel Fierro"
   }
 }
